--- a/app/src/main/res/layout/list_item_article.xml
+++ b/app/src/main/res/layout/list_item_article.xml
@@ -9,18 +9,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
+        app:cardBackgroundColor="#F8F7F7"
+        app:cardCornerRadius="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/article_image"
-                android:layout_width="80dp"
-                android:layout_height="50dp"
+                android:layout_width="100dp"
+                android:layout_height="70dp"
                 android:layout_margin="8dp"
                 app:layout_constraintEnd_toStartOf="@+id/newspaper_title"
                 app:layout_constraintStart_toStartOf="parent"
@@ -30,8 +37,10 @@
                 android:id="@+id/newspaper_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginTop="4dp"
                 android:maxLines="1"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/newspaper_desc"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/article_image"
@@ -41,7 +50,9 @@
                 android:id="@+id/newspaper_date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"
                 android:maxLines="1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/newspaper_desc"
@@ -55,11 +66,13 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                android:maxLines="2"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/newspaper_desc"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_weight="2"
                 app:layout_constraintStart_toEndOf="@+id/article_image"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_weight="2"
                 tools:text="dsafads" />
 
             <TextView
@@ -67,12 +80,14 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginHorizontal="8dp"
-                android:layout_marginTop="4dp"
-                app:layout_constraintBottom_toBottomOf="@+id/newspaper_date"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:maxLines="4"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_weight="5"
                 app:layout_constraintStart_toEndOf="@+id/article_image"
                 app:layout_constraintTop_toBottomOf="@+id/newspaper_title"
+                app:layout_constraintVertical_weight="5"
                 tools:text="dsafads" />
 
 
