--- a/app/src/main/res/layout/list_item_article.xml
+++ b/app/src/main/res/layout/list_item_article.xml
@@ -52,6 +52,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="8dp"
                 android:layout_marginTop="4dp"
+                android:textSize="10sp"
                 android:layout_marginBottom="8dp"
                 android:maxLines="1"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -68,6 +69,7 @@
                 android:layout_marginEnd="8dp"
                 android:maxLines="2"
                 android:textStyle="bold"
+                android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/newspaper_desc"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/article_image"
@@ -83,6 +85,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:maxLines="4"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/article_image"
